add missing main methods into Bench02